k8s-on-premise-cloud/manifest/movie-web-backend-movie-service/movie-service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: movie-service-network-policy
  namespace: movie-web
spec:
  podSelector:
    matchLabels:
      app: movie-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
        - podSelector:
            matchLabels:
              app: bill-service
